<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Upload_Download">

    <EditText
        android:id="@+id/file_name_input"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/file_name"
        android:textColor="@color/textColor"
        android:background="@drawable/rectangular_border"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/file_save_warn"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="132dp"
        android:paddingStart="17dp"
        android:paddingEnd="2dp"
        android:text="@string/file_name_warning"
        app:layout_constraintBottom_toTopOf="@+id/file_chooser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/file_name_input"
        app:layout_constraintVertical_bias="0.644" />

    <TextView
        android:id="@+id/file_chooser"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@drawable/rectangular_border"
        android:gravity="center"
        android:text="@string/file_chooser"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/file_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/file_name_input"
        app:layout_constraintVertical_bias="0.683" />

    <Button
        android:id="@+id/file_submit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:background="@drawable/rounded_border"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>